Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37444

Android: Several autotests crash that did not before

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.3.0
    • 5.3.0 Alpha
    • QPA
    • None
    • Android
    • 287fa94fe2f93e2857a4c15f69435c4ea14de82e, 76eefbe8af7655f8d6979069aea07e4cb32c6ee8

    Description

      The following tests did not crash in Qt 5.2.0, but crashes or are for some other reason missing from the result of a current build of Qt 5.3.0:

      tst_QPropertyAnimation
      tst_QDataStream
      tst_QIdentityProxyModel
      tst_QSortFilterProxyModel
      tst_QImageIOHandler
      tst_QImageReader
      tst_QPixmapCache
      tst_QStandardItem
      tst_QBackingStore
      tst_QDrag
      tst_QGuiEventLoop
      tst_qinputmethod
      tst_QMouseEvent
      tst_qmouseevent_modal
      tst_QPalette
      tst_QSurfaceFormat
      tst_QBrush
      tst_QPaintEngine
      tst_QAbstractTextDocumentLayout
      tst_QRawFont
      tst_QStaticText
      tst_QTextDocument
      tst_QTextDocumentLayout
      tst_QRegExpValidator
      tst_QGL
      tst_QGLBuffer
      tst_QGLFunctions
      

      The following test functions are missing:

      tst_QMovie::infiniteLoop()
      tst_QMovie::cleanupTestCase()
      tst_QQuaternion::multiply()
      tst_QPainterPath::intersects_QRectF() (some inputs)
      tst_QPainterPath::testContainsAndIntersects()
      tst_QPainterPath::testSimplified()
      tst_QPainterPath::testStroker()
      tst_QPainterPath::currentPosition()
      tst_QDoubleValidator::validate() (some inputs)
      tst_QDoubleValidator::validateThouSep()
      tst_QDoubleValidator::validateIntEquiv()
      tst_QDoubleValidator::notifySignals()
      tst_QDoubleValidator::cleanUpTestCase()
      

      Attachments

        For Gerrit Dashboard: QTBUG-37444
        # Subject Branch Project Status CR V

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            esabraha Eskil Abrahamsen Blomfeldt
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes